--- a/server/views/pages/courtAppearance/next-hearing-type.njk
+++ b/server/views/pages/courtAppearance/next-hearing-type.njk
@@ -2,15 +2,21 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
+{% set fieldSetHtml %}
+    <h1 class="govuk-fieldset__heading{% if currentlySetTypeDescription %} govuk-!-static-margin-bottom-3{% endif %}">{% if isAddCourtAppearance%}How will they attend the hearing?{%else%}Edit the next hearing type{%endif%}</h1>
+    {% if currentlySetTypeDescription%}
+    <p class="govuk-body-l govuk-!-static-margin-bottom-3" data-qa="legendParagraph">{{ currentlySetTypeDescription }}</p>
+    {% endif %}
+{% endset %}
+
 {% set radiosData = {
                     id: "nextHearingType",
                     errorMessage: errors | findError('nextHearingType'),
                     name: "nextHearingType",
                     fieldset: {
                         legend: {
-                        text: "How will they attend the hearing?" if isAddCourtAppearance else "Edit the next hearing type",
-                        isPageHeading: true,
-                        classes: "govuk-fieldset__legend--l"
+                            html: fieldSetHtml,
+                            classes: "govuk-fieldset__legend--l"
                         }
                     },
                     items: []
