--- a/server/views/pages/courtAppearance/select-court-name.njk
+++ b/server/views/pages/courtAppearance/select-court-name.njk
@@ -37,7 +37,7 @@
                         }
                     ]
                 }) }}
-
+                <input type="hidden" name="lastCourtCode" value="{{ lastCourtCode }}">
                 {{ govukButton({
                     text: "Continue",
                     attributes: {  'data-qa': 'continue-button' }
